fix(general): code adjustment